--- a/pathfinder/wayfinderpro/templates/wayfinderpro/initial.html
+++ b/pathfinder/wayfinderpro/templates/wayfinderpro/initial.html
@@ -138,17 +138,17 @@
     <div class="dummycontainer">
         <div class="navbar">
             <div class="logo">
-                <img src="./Logo_Navbar.png" alt="" class="logo">
+                <img src="../../../static/assets/Logo_Navbar.png" alt="" class="logo">
                 
-                <span class="about"><img src="./info.svg" alt="">ABOUT ROOMS</span>
+                <span class="about"><img src="../../../static/assets/info.svg" alt="">ABOUT ROOMS</span>
             </div>
             <div class="list">
                 <div class="colleges">
-                    <img src="./school.svg" alt="">
+                    <img src="../../../static/assets/school.svg" alt="">
                     <span>COLLEGES</span>
                 </div>
                 <div class="viewrooms">
-                    <img src="door.svg" alt="">
+                    <img src="../../../static/assets/door.svg" alt="">
                     <span>VIEW ROOM</span>
                 </div>
                 <div class="welcome">
