--- a/pathfinder/wayfinderpro/templates/wayfinderpro/finder.html
+++ b/pathfinder/wayfinderpro/templates/wayfinderpro/finder.html
@@ -95,11 +95,12 @@
         .searchArea {
             width: 25%;
             padding: 1rem;
+            height: 100rem;
         }
         .searchBox {
             box-sizing: border-box;
             background-color: #F8F9FA;
-            height: 50%;
+            height: 70%;
             border-radius: 0.2rem;
             border: 2px solid #E2E3E4;
             padding: 2rem;
@@ -210,7 +211,7 @@
                             <input class="submitbutton" type="submit" value="Submit">
                         </div>
                         {% comment %} <br> {% endcomment %}
-                        <select class="roomdrop" name="room_selection" id="room-selection" size = 5>
+                        <select class="roomdrop" name="room_selection" id="room-selection">
                             {% for room in rooms %}
                                 <option class="options" value="{{ room.slug }}" room-nickname="{{ room.nickname }}">{{ room.name }}</option>
                             {% endfor %}
@@ -276,7 +277,7 @@
             <!-- Conditional to render the path if room has been selected -->
             <div class="mapdisplay">
                 {% if selectedRoom %}
-                <h1 class="titles">{{ selectedRoom.name }}</h1>
+                <h1 class="titles">{{ selectedRoom.name }} || Floor {{ selectedRoom.floorNumber }}</h1>
                 <script>
                     var gridSize = 10;
                     var gridWidth = 100;
